--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<h1>
+    What to Eat
+</h1>
+
+<h2 class="test">Cooking made simple</h2>
+
+<img src="/apps/frontend-wte/src/assets/images/what-to-eat-logo.png" alt="">
