started working on header and main page

--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -1,6 +1,16 @@
-<h1>
-    What to Eat
-</h1>
-<h3>Cooking made Simple</h3>
+<div class="header-box">
+    <div class="main-header-text">
+        <h1>
+            What to Eat
+        </h1>
+    </div>
+    <div class="second-header-text">
+        <h3>Cooking made Simple</h3>
+    </div>
+</div>
 
-<img src="/apps/frontend-wte/src/assets/images/what-to-eat-logo.png" alt="">
+
+
+<div>
+    <img src="/apps/frontend-wte/src/assets/images/what-to-eat-logo.png" alt="">
+</div>
