--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -5,5 +5,21 @@ html {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 4rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+.header-box {
+  border: 1px solid black;
+}
+
+.main-header-text {
+  text-align: center;
+}
+
+.second-header-text {
+  text-align: center;
 }
