--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,8 @@
-<p>home-page works!</p>
+<div class="recipe-container">
+    <div class="recipe-box recipe-box-1">
+        <h2>Generate Recipe</h2>
+    </div>
+    <div class="recipe-box recipe-box-2">
+        <h2>Random Recipe</h2>
+    </div>
+</div>
