--- a/apps/frontend-wte/src/app/components/footer/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<div class="footer-container">
+    <div class="footer-box footer-box-1">
+        <h3>Contact us</h3>
+    </div>
+    <div class="footer-box footer-box-2">
+        <h3>
+            About us
+        </h3>
+    </div>
+    <div class="footer-box footer-box-3">
+        <h3>More information</h3>
+    </div>
+</div>
