added the generate recipes buttons on main page

--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -1,16 +1,13 @@
-<div class="header-box">
-    <div class="main-header-text">
+<div class="header-container">
+    <div class="header-box header-box-1">
         <h1>
             What to Eat
         </h1>
     </div>
-    <div class="second-header-text">
+    <div class="header-box header-box-2">
         <h3>Cooking made Simple</h3>
     </div>
-</div>
-
-
-
-<div>
-    <img src="/apps/frontend-wte/src/assets/images/what-to-eat-logo.png" alt="">
+    <div class="header-box header-box-3">
+        <img src="/apps/frontend-wte/src/assets/images/what-to-eat-logo.png" alt="">
+    </div>
 </div>
