--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -1,25 +1,32 @@
 html {
   font-size: 62, 5%;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 h1 {
   font-size: 4rem;
+  color: #0000cd;
 }
 
 h3 {
   font-size: 2rem;
+  color: #0000cd;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  background-color: #ffa500;
 }
 
 .header-box {
-  border: 1px solid black;
+  text-align: center;
+  border: 1px solid red;
 }
 
-.main-header-text {
-  text-align: center;
-}
-
-.second-header-text {
-  text-align: center;
+.header-box-1 {
+  height: 10rem;
+  width: 40rem;
+  align-items: center;
 }
