--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -1,8 +1,8 @@
 <div class="recipe-container">
     <div class="recipe-box recipe-box-1">
-        <h2>Generate Recipe</h2>
+        <h2><a href="">Generate Recipe</a></h2>
     </div>
     <div class="recipe-box recipe-box-2">
-        <h2>Random Recipe</h2>
+        <h2><a href="">Random Recipe</a></h2>
     </div>
 </div>
