added new footer component

--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -5,4 +5,7 @@
     <div class="recipe-box recipe-box-2">
         <h2><a href="">Random Recipe</a></h2>
     </div>
+    <div class="recipe-box recipe-box-3">
+        <h2><a href="">How it works</a></h2>
+    </div>
 </div>
