--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -11,3 +11,21 @@
         <img src="/apps/frontend-wte/src/assets/images/what-to-eat-logo.png" alt="">
     </div>
 </div>
+
+<!-- 
+
+    <div class="footer-container">
+    <div class="footer-box footer-box-1">
+        <h3>Contact us</h3>
+    </div>
+    <div class="footer-box footer-box-2">
+        <h3>
+            About us
+        </h3>
+    </div>
+    <div class="footer-box footer-box-3">
+        <h3>More information</h3>
+    </div>
+</div>
+
+ -->
