added new logo on header. Looks good. Also added new pictures

--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -1,5 +1,10 @@
-<div class="header-container">
+<div>
+    <img id="header-image" src="/assets/images/what-to-eat-logo2.png" alt="">
+</div>
+
+<!-- <div class="header-container">
     <div class="header-box header-box-1">
+        <img class="header-image" src="/assets/images/what-to-eat-logo.png" alt="">
         <h1>
             What to Eat
         </h1>
@@ -10,22 +15,4 @@
     <div class="header-box header-box-3">
         <img src="/apps/frontend-wte/src/assets/images/what-to-eat-logo.png" alt="">
     </div>
-</div>
-
-<!-- 
-
-    <div class="footer-container">
-    <div class="footer-box footer-box-1">
-        <h3>Contact us</h3>
-    </div>
-    <div class="footer-box footer-box-2">
-        <h3>
-            About us
-        </h3>
-    </div>
-    <div class="footer-box footer-box-3">
-        <h3>More information</h3>
-    </div>
-</div>
-
- -->
+</div> -->
