--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
@@ -13,7 +13,8 @@ html {
 
 .recipe-box {
   text-align: center;
-  margin: 4rem 0 0 4rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
   height: 5rem;
   width: 15rem;
   border: 1px solid black;
