--- a/apps/frontend-wte/src/app/components/header/header.component.scss
+++ b/apps/frontend-wte/src/app/components/header/header.component.scss
@@ -2,31 +2,32 @@ html {
   font-size: 62, 5%;
 }
 
-h1 {
-  font-size: 4rem;
-  color: #0000cd;
-}
+// .header-container {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   border: 1px solid black;
+//   background-color: #ffa500;
+// }
 
-h3 {
-  font-size: 2rem;
-  color: #0000cd;
-}
+// .header-box {
+//   text-align: center;
+//   border: 1px solid red;
+// }
 
-.header-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid black;
-  background-color: #ffa500;
-}
+// .header-box-1 {
+//   height: 10rem;
+//   width: 40rem;
+//   align-items: center;
+// }
 
-.header-box {
-  text-align: center;
-  border: 1px solid red;
-}
+// .image-header {
+//   object-fit: cover;
+// }
 
-.header-box-1 {
-  height: 10rem;
-  width: 40rem;
-  align-items: center;
+#header-image {
+  width: 100vw;
+  max-width: 100%;
+  height: 50vh;
+  object-fit: cover;
 }
