added footer stylings

--- a/apps/frontend-wte/src/app/components/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="footer-box footer-box-2">
         <h3>
-            About us
+            About
         </h3>
     </div>
     <div class="footer-box footer-box-3">
