--- a/apps/frontend-wte/src/app/components/footer.component.scss
+++ b/apps/frontend-wte/src/app/components/footer.component.scss
@@ -1,3 +1,13 @@
-h1 {
-  font-size: 100rem;
+html {
+  font-size: 62, 5%;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  text-align: center;
+}
+
+.footer-box {
 }
