--- a/apps/frontend-wte/src/app/components/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer.component.html
@@ -1,13 +1,5 @@
-<div class="footer-container">
-    <div class="footer-box footer-box-1">
-        <h3>Contact us</h3>
-    </div>
-    <div class="footer-box footer-box-2">
-        <h3>
-            About
-        </h3>
-    </div>
-    <div class="footer-box footer-box-3">
-        <h3>More information</h3>
-    </div>
+<div id="footer-container">
+    <h6>About us</h6>
+    <h6>Contact</h6>
+    <h6>More information</h6>
 </div>
