--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.scss
@@ -1,17 +1,12 @@
-html {
-  font-size: 62, 5%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-.recipe-container {
+#generate-container,
+#tutorial-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid black;
 }
 
-.recipe-box {
+.generate-box {
   text-align: center;
   margin-bottom: 2rem;
   margin-top: 2rem;
@@ -19,4 +14,13 @@ html {
   width: 15rem;
   border: 1px solid black;
   border-radius: 10px;
+}
+
+#how-it-works-header-text {
+  text-align: center;
+  font-size: 2.5rem;
+}
+.tutorial-box {
+  letter-spacing: 1px;
+  margin-bottom: 1rem;
 }
