added about info text and contact information

--- a/apps/frontend-wte/src/app/components/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer.component.html
@@ -1,4 +1,5 @@
 <div id="footer-container">
+    <a routerLink="/about-page">Privacy Policy</a>
     <h6>About us</h6>
     <h6>Contact</h6>
     <h6>More information</h6>
