--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -1,1 +1,22 @@
-<p>about-page works!</p>
+<div id="about-container">
+    <div class="about-box">
+        <h6>About</h6>
+        <article>
+            What to Eat is an initiative to make it easy and fun to start cooking. Have you found yourself wanting to
+            cook
+            but feeling very uninspired? Then What To eat is the perfect app for you. Very easily you can find a large
+            number of recipes and that too very easy!
+
+            We are a small team of dedicated developers who wish to see that the world starts eating in a more conscious
+            way
+            way. Cooking yourself is a great way to achieve this.
+        </article>
+    </div>
+    <div class="about-box">
+        <h6>Contact</h6>
+        <article>
+            If you wish to get in contact with us you can send an email on <a
+                href="info@whattoeat.com">info@whattoeat.com</a>
+        </article>
+    </div>
+</div>
