added routing option to be able to navigate to about page

--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -8,15 +8,13 @@
             number of recipes and that too very easy!
 
             We are a small team of dedicated developers who wish to see that the world starts eating in a more conscious
-            way
             way. Cooking yourself is a great way to achieve this.
         </article>
     </div>
     <div class="about-box">
         <h6>Contact</h6>
         <article>
-            If you wish to get in contact with us you can send an email on <a
-                href="info@whattoeat.com">info@whattoeat.com</a>
+            If you wish to get in contact with us you can send an email to us.
         </article>
     </div>
 </div>
