--- a/apps/frontend-wte/src/app/components/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer.component.html
@@ -1,6 +1,7 @@
 <div id="footer-container">
-    <a routerLink="/about-page">Privacy Policy</a>
-    <h6>About us</h6>
+    <h6>
+        test
+    </h6>
     <h6>Contact</h6>
     <h6>More information</h6>
 </div>
