added styling to the about page

--- a/apps/frontend-wte/src/app/components/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer.component.html
@@ -1,7 +1,6 @@
 <div id="footer-container">
     <h6>
-        test
+        <a routerLink="/about-page">About</a>
     </h6>
-    <h6>Contact</h6>
-    <h6>More information</h6>
+    <h6><a routerLink="/about-page">Contact us</a></h6>
 </div>
