--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -17,4 +17,7 @@
             If you wish to get in contact with us you can send an email to us.
         </article>
     </div>
+    <div class="about-box back-to-home-box">
+        <h6><a routerLink="/home-page">Back to Home</a></h6>
+    </div>
 </div>
