tried to add routerlink without success

--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -18,6 +18,8 @@
         </article>
     </div>
     <div class="about-box back-to-home-box">
-        <h6><a routerLink="/home-page">Back to Home</a></h6>
+        <h6><a routerLink="/">test</a></h6>
+        <a routerLink="/home-page" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a>
     </div>
 </div>
+<!-- <router-outlet></router-outlet> -->
