--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="about-box back-to-home-box">
         <h6><a routerLink="/">test</a></h6>
-        <a routerLink="/home-page" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a>
+        <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a>
     </div>
 </div>
 <!-- <router-outlet></router-outlet> -->
