--- a/apps/frontend-wte/src/app/components/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer.component.html
@@ -1,6 +1,6 @@
 <div id="footer-container">
     <h6>
-        <a routerLink="/about-page">About</a>
+        <a routerLink="/about">About</a>
     </h6>
-    <h6><a routerLink="/about-page">Contact us</a></h6>
+    <h6><a routerLink="/about">Contact us</a></h6>
 </div>
