Removed unused code and comment. Removed imports of header and footer in pages

--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -17,9 +17,8 @@
             If you wish to get in contact with us you can send an email to us.
         </article>
     </div>
-    <div class="about-box back-to-home-box">
+    <div class="about-box">
         <h6><a routerLink="/">test</a></h6>
         <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a>
     </div>
 </div>
-<!-- <router-outlet></router-outlet> -->
