added routerlink in tutorial

--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -5,4 +5,5 @@
     <div class="generate-box">
         <h2><a href="">Random Recipe</a></h2>
     </div>
+    <h2><a routerLink="/tutorial">Tutorial</a></h2>
 </div>
