--- a/apps/frontend-wte/src/app/pages/tutorial-page/tutorial-page.component.html
+++ b/apps/frontend-wte/src/app/pages/tutorial-page/tutorial-page.component.html
@@ -15,4 +15,5 @@
     <div class="tutorial-box">
         <img src="assets/images/tablet-and-food.png" alt="A picture of an instruction manual">
     </div>
+    <h6><a routerLink="/">Back to home</a></h6>
 </div>
