--- a/apps/frontend-wte/src/app/components/footer/footer.component.html
+++ b/apps/frontend-wte/src/app/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <div id="footer-container">
     <h6>
-        <a routerLink="/about">About</a>
+        <a routerLink="/">About</a>
     </h6>
+    <a routerLink="/home"></a>
     <h6><a routerLink="/about">Contact us</a></h6>
 </div>
