--- a/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
+++ b/apps/frontend-wte/src/app/pages/about-page/about-page.component.html
@@ -18,7 +18,6 @@
         </article>
     </div>
     <div class="about-box">
-        <h6><a routerLink="/">test</a></h6>
-        <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a>
+        <h6><a routerLink="/">Back to home</a></h6>
     </div>
 </div>
