--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -1,1 +1,13 @@
-<p>recipe-list-page works!</p>
+<div id="page-container">
+  <h2>Recipes</h2>
+  <div id="recipe-container">
+    <!-- Loop through recipes and add nice thumbnails -->
+  </div>
+</div>
+
+<!-- 
+    EXAMPLE  
+    <div *ngFor="let recipe of recipes">
+      Name: {{ recipe.name }}
+      <img [src]="recipe.img" alt="{{ recipe.name }} image">
+    </div> -->
