added full recipe list box on main page and added correct routing for it

--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -5,5 +5,12 @@
     <div class="generate-box">
         <h2><a href="">Random Recipe</a></h2>
     </div>
-    <h2><a routerLink="/tutorial">Tutorial</a></h2>
+    <div class="generate-box">
+        <h2><a routerLink="/tutorial">Tutorial</a></h2>
+    </div>
+    <div class="generate-box">
+        <h2>
+            <a routerLink="/recipe-list">Full Recipe List</a>
+        </h2>
+    </div>
 </div>
