--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -5,9 +5,7 @@
   </div>
 </div>
 
-<!-- 
-    EXAMPLE  
-    <div *ngFor="let recipe of recipes">
-      Name: {{ recipe.name }}
-      <img [src]="recipe.img" alt="{{ recipe.name }} image">
-    </div> -->
+<div *ngFor="let recipe of recipes">
+  Name: {{ recipe.name }}
+  <img [src]="recipe.img" alt="{{ recipe.name }} image">
+</div>
