--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .recipe-box {
@@ -11,12 +12,14 @@
   border: 1px solid black;
 }
 
-// img {
-//   width: 10rem;
-//   height: 10rem;
-//   object-fit: none;
-// }
-
 h3 {
   font-size: 3rem;
+}
+
+img {
+  height: 12rem;
+  width: 15rem;
+  object-fit: cover;
+}
+.recipe-img-box {
 }
