--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
@@ -1,6 +1,8 @@
 #recipe-list-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -8,7 +10,7 @@
 
 .recipe-box {
   width: 20rem;
-  height: 20rem;
+  height: 18rem;
   border: 1px solid black;
 }
 
@@ -21,5 +23,13 @@ img {
   width: 15rem;
   object-fit: cover;
 }
-.recipe-img-box {
+
+#header-text {
+  text-align: center;
+}
+
+.name-styling {
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
