added back to home button

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -22,6 +22,7 @@
   <div class="recipe-box"></div>
   <div class="recipe-box"></div>
   <div class="recipe-box"></div>
+  <h3><a routerLink="/">Back to home</a></h3>
 </div>
 
 
