fixed the syntax error in recipe data

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -8,7 +8,7 @@
       <br>
       {{ recipe.shortDescription }}
       <br>
-      Cooking Time: {{ recipe.cookingTime }}
+      Cooking Time: {{ recipe.cookingTime.minutes }}
       <br>
       <br>
       <div><img [src]="recipe.img" alt="{{ recipe.name }} image"></div>
