Remade shortenDesctiption function in recipe list component. Fixed pathing errors for string formatters lib

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -6,7 +6,7 @@
     <div class="recipe-box" *ngFor="let recipe of recipes">
       <span class="name-styling">{{ recipe.name }}</span>
       <br>
-      {{ recipe.shortDescription }}
+      {{ shortenDescription(recipe.description) }}
       <br>
       Cooking Time: {{ recipe.cookingTime.minutes }}
       <br>
