--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -2,28 +2,18 @@
   <h3>Full Recipe List</h3>
 </div>
 <div id="recipe-list-container">
-  <div class="recipe-box">
-    <div class="recipe-box" *ngFor="let recipe of recipes">
-      <span class="name-styling">{{ recipe.name }}</span>
-      <br>
-      {{ shortenDescription(recipe.description) }}
-      <br>
-      Cooking Time: {{ recipe.cookingTime.minutes }}
-      <br>
-      <br>
-      <div><img [src]="recipe.img" alt="{{ recipe.name }} image"></div>
-    </div>
+  <div class="recipe-box" *ngFor="let recipe of recipes">
+    <span class="name-styling">{{ recipe.name }}</span>
+    <br>
+    {{ shortenDescription(recipe.description) }}
+    <br>
+    Cooking Time: {{ recipe.cookingTime.minutes }}
+    <br>
+    <br>
+    <div><img [src]="recipe.img" alt="{{ recipe.name }} image"></div>
   </div>
-  <div class="recipe-box"></div>
-  <div class="recipe-box"></div>
-  <div class="recipe-box"></div>
-  <div class="recipe-box"></div>
-  <div class="recipe-box"></div>
-  <div class="recipe-box"></div>
-  <div class="recipe-box"></div>
-  <div class="recipe-box"></div>
-  <h3><a routerLink="/">Back to home</a></h3>
 </div>
+<h3 id="back-to-home-btn"><a routerLink="/">Back to home</a></h3>
 
 
 
