Fixed router link name for recipes

--- a/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
+++ b/apps/frontend-wte/src/app/pages/home-page/home-page.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="generate-box">
         <h2>
-            <a routerLink="/recipe-list">Full Recipe List</a>
+            <a routerLink="/recipes">Full Recipe List</a>
         </h2>
     </div>
 </div>
