--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -11,6 +11,8 @@
     Cooking Time: {{ recipe.cookingTime.minutes }}
     <br>
 
+    <button (click)="toggleDisplayName()">Show Description</button>
+
     <div *ngIf="displayName; then thenBlock; else elseBlock"></div>
 
     <ng-template #thenBlock>
@@ -22,7 +24,6 @@
     </ng-template>
 
 
-    <!-- TEST -->
     <div><img [src]="recipe.img" alt="{{ recipe.name }} image"></div>
   </div>
 </div>
