click to toggle true false on button is now working

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -11,7 +11,7 @@
     Cooking Time: {{ recipe.cookingTime.minutes }}
     <br>
 
-    <button (click)="toggleDisplayName()">Show Description</button>
+    <button (click)="displayName = !displayName">Action</button>
 
     <div *ngIf="displayName; then thenBlock; else elseBlock"></div>
 
