trying to make a function that writes both hours and minutes of time is longer that one hour

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -15,7 +15,7 @@
     <ng-template #elseBlock>
       {{ (recipe.description) }}
     </ng-template>
-    Cooking Time: {{ recipe.cookingTime.minutes }}
+    <span>Cooking Time: {{ recipe.cookingTime.minutes }} m</span>
     <br>
     <div><img [src]="recipe.img" alt="{{ recipe.name }} image"></div>
   </div>
