added some styling in recipe page

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -1,3 +1,10 @@
-<div>
-    <h2> </h2>
+<div id="header-box">
+    <h2>insert title here</h2>
+</div>
+<div id="page-container">
+    <div class="page-box">test</div>
+    <div class="page-box"></div>
+    <div class="page-box"></div>
+    <div class="page-box"></div>
+    <div class="page-box"></div>
 </div>
