changed the name in hour and minute function

--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -15,7 +15,7 @@
     <ng-template #elseBlock>
       {{ (recipe.description) }}
     </ng-template>
-    <span>Cooking Time: {{ detailedCookingTime(recipe.cookingTime.hours, recipe.cookingTime.minutes) }}</span>
+    <span>Cooking Time: {{ detailedCookingTime(recipe.cookingTime) }}</span>
     <br>
     <a routerLink="/recipe-page">See full recipe</a>
     <div><img [src]="recipe.img" alt="{{ recipe.name }} image"></div>
