--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
@@ -14,24 +14,12 @@
   border: 1px solid black;
 }
 
-h3 {
+.h3-size {
   font-size: 3rem;
-}
-
-img {
-  height: 12rem;
-  width: 15rem;
-  object-fit: cover;
 }
 
 #header-text {
   text-align: center;
-}
-
-.name-styling {
-  padding: 1rem;
-  font-size: 1.5rem;
-  font-weight: bold;
 }
 
 #back-to-home-btn {
