Only show read more button in recipe thumbnail when description is 25 characters or more

--- a/apps/frontend-wte/src/app/components/recipe-thumbnail/recipe-thumbnail.component.html
+++ b/apps/frontend-wte/src/app/components/recipe-thumbnail/recipe-thumbnail.component.html
@@ -11,7 +11,8 @@
   </ng-template>
 
   <br>
-  <button (click)="showFullDescription = !showFullDescription">Read more</button>
+  <button *ngIf="recipe.description.length >= shortenDescriptionLength"
+    (click)="showFullDescription = !showFullDescription">Read more</button>
   <br>
 
   <span>Cooking Time: {{ detailedCookingTime(recipe.cookingTime) }}</span>
