--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -3,7 +3,7 @@
 </div>
 <div id="page-container">
     <div class="page-box">test</div>
-    <div class="page-box"></div>
+    <div class="page-box">test2</div>
     <div class="page-box"></div>
     <div class="page-box"></div>
     <div class="page-box"></div>
