--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -1,10 +1,39 @@
-<div id="header-box">
-    <h2>insert title here</h2>
-</div>
-<div id="page-container">
-    <div class="page-box">test</div>
-    <div class="page-box">test2</div>
-    <div class="page-box"></div>
-    <div class="page-box"></div>
-    <div class="page-box"></div>
+<div class="recipe-card">
+    <!-- Header image -->
+    <img class="recipe-image" src="{{ recipe.img }}" alt="{{ recipe.name }}">
+
+    <!-- Recipe Title and Description -->
+    <div class="recipe-content">
+        <h1 class="recipe-title">{{ recipe.name }}</h1>
+        <p class="recipe-description">{{ recipe.description }}</p>
+    </div>
+
+    <!-- Recipe Details -->
+    <div class="recipe-details">
+        <!-- Ingredients Section -->
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li *ngFor="let ingredient of recipe.ingredients">
+                    {{ ingredient.quantity.amount }} {{ ingredient.quantity.unit }} - {{ ingredient.name }}
+                </li>
+            </ul>
+        </div>
+
+        <!-- Steps Section -->
+        <div class="steps">
+            <h2>Steps</h2>
+            <ol>
+                <li *ngFor="let step of recipe.steps">
+                    Step {{ step.stepNumber }}: {{ step.description }}
+                </li>
+            </ol>
+        </div>
+
+        <!-- Cooking Time -->
+        <div class="cooking-time">
+            <h3>Cooking Time</h3>
+            <p>{{ recipe.cookingTime.hours }} hours {{ recipe.cookingTime.minutes }} minutes</p>
+        </div>
+    </div>
 </div>
