--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -1,4 +1,4 @@
-<div class="recipe-card">
+<div class="recipe-card" *ngIf="recipe">
     <!-- Header image -->
     <img class="recipe-image" src="{{ recipe.img }}" alt="{{ recipe.name }}">
 
@@ -37,3 +37,4 @@
         </div>
     </div>
 </div>
+<h3 id="back-to-home-btn" class="h3-size"><a routerLink="/">Back to home</a></h3>
