--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -1,4 +1,4 @@
-<div class="recipe-card" *ngIf="recipe">
+<div class="recipe-card">
     <!-- Header image -->
     <img class="recipe-image" src="{{ recipe.img }}" alt="{{ recipe.name }}">
 
