--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-page/recipe-page.component.html
@@ -1,16 +1,10 @@
 <div class="recipe-card">
-    <!-- Header image -->
     <img class="recipe-image" src="{{ recipe.img }}" alt="{{ recipe.name }}">
-
-    <!-- Recipe Title and Description -->
     <div class="recipe-content">
         <h1 class="recipe-title">{{ recipe.name }}</h1>
         <p class="recipe-description">{{ recipe.description }}</p>
     </div>
-
-    <!-- Recipe Details -->
     <div class="recipe-details">
-        <!-- Ingredients Section -->
         <div class="ingredients">
             <h2>Ingredients</h2>
             <ul>
@@ -19,8 +13,6 @@
                 </li>
             </ul>
         </div>
-
-        <!-- Steps Section -->
         <div class="steps">
             <h2>Steps</h2>
             <ol>
@@ -29,12 +21,10 @@
                 </li>
             </ol>
         </div>
-
-        <!-- Cooking Time -->
         <div class="cooking-time">
             <h3>Cooking Time</h3>
             <p>{{ recipe.cookingTime.hours }} hours {{ recipe.cookingTime.minutes }} minutes</p>
         </div>
     </div>
 </div>
-<h3 id="back-to-home-btn" class="h3-size"><a routerLink="/">Back to home</a></h3>
+<h3 id="back-to-recipe-btn" class="h3-size"><a routerLink="/recipes">Back to All Recipies</a></h3>
