--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.html
@@ -1,11 +1,11 @@
 <div id="header-text">
-  <h3 class="h3-size">Full Recipe List</h3>
+  <h3>Full Recipe List</h3>
 </div>
 <div id="recipe-list-container">
   <div class="recipe-box" *ngFor="let recipe of recipes">
     <app-recipe-thumbnail class="recipe-text" [recipe]="recipe"></app-recipe-thumbnail>
   </div>
 </div>
-<h3 id="back-to-home-btn" class="h3-size">
+<h3 id="back-to-home-btn">
   <a routerLink="/">Back to home</a>
 </h3>
