--- a/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
+++ b/apps/frontend-wte/src/app/pages/recipe-list-page/recipe-list-page.component.scss
@@ -38,11 +38,9 @@
 
 #header-text {
   text-align: center;
+  font-size: 3rem;
+  font-family: 'avenir';
   margin-bottom: 1.5rem;
-}
-
-.h3-size {
-  font-size: 2.5rem;
   font-weight: bold;
   color: #333333;
   text-align: center;
