moved recipe text class and styling to recipe-thumbnail component

--- a/apps/frontend-wte/src/app/components/recipe-thumbnail/recipe-thumbnail.component.html
+++ b/apps/frontend-wte/src/app/components/recipe-thumbnail/recipe-thumbnail.component.html
@@ -3,7 +3,7 @@
   <br>
 
   <div *ngIf="showFullDescription; then thenBlock; else elseBlock"></div>
-  <ng-template #thenBlock>
+  <ng-template class="recipe-text" #thenBlock>
     {{ recipe.description }}
   </ng-template>
   <ng-template #elseBlock>
