added routerlink to headerimage so when you press image you go back to home

--- a/apps/frontend-wte/src/app/components/header/header.component.html
+++ b/apps/frontend-wte/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
 <div>
-    <img id="header-image" src="/assets/images/what-to-eat-logo2.png" alt="">
+    <a routerLink="/" id="logo-link">
+        <img id="header-image" src="/assets/images/what-to-eat-logo2.png" alt="">
+    </a>
 </div>
